@@ -97,6 +97,10 @@ public class ConstantScoreQuery extends Query {
             public float score() throws IOException {
               return theScore;
             }
+            @Override
+            public int freq() throws IOException {
+              return 1;
+            }
           });
         }
       };
@@ -134,6 +138,10 @@ public class ConstantScoreQuery extends Query {
             @Override
             public float score() throws IOException {
               return score;
+            }
+            @Override
+            public int freq() throws IOException {
+              return 1;
             }
             @Override
             public Collection<ChildScorer> getChildren() {
